refactor(backend): Refatora entidades, DTOs, serviços e controllers de Viagem para maior consistência e encapsulamento. Ajusta MotoristaService.